début de mon projet1

--- a/www/index.html
+++ b/www/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +8,18 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>hello world !</h1>
-  <img src="hello.jpg" alt="hello world !">
+    <nav class="header">
+  <h1>Bienvenue sur le site de UGC cinéma</h1>
+</nav>
+<ul class="t">Cinémas</ul>
+  <ul class="t">Films</ul>
+  <ul>Evènements</ul>
+  <ul>Offres et Cartes</ul>
+  <ul>Viva L'opéra</ul> 
+    <img src="img/mea.jpg" alt="mea.jpg ">
+  </div>
+  
+  <p>Ce site vous permet de voir tous les nouveaux films<br/>Les films projetés en salle mais aussi sortir en semaine et dans les mois à venir</p>
+  <h1>Nouveautés</h1>
 </body>
 </html>
