ajout de l'entete et nav bar

--- a/www/index.html
+++ b/www/index.html
@@ -1,25 +1,38 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
+ <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="style.css">
   <title>Document</title>
-</head>
-<body>
-    <nav class="header">
-  <h1>Bienvenue sur le site de UGC cinéma</h1>
-</nav>
-<ul class="t">Cinémas</ul>
-  <ul class="t">Films</ul>
-  <ul>Evènements</ul>
-  <ul>Offres et Cartes</ul>
-  <ul>Viva L'opéra</ul> 
-    <img src="img/mea.jpg" alt="mea.jpg ">
-  </div>
-  
-  <p>Ce site vous permet de voir tous les nouveaux films<br/>Les films projetés en salle mais aussi sortir en semaine et dans les mois à venir</p>
-  <h1>Nouveautés</h1>
-</body>
+ </head>
+  <body class="front">
+   <header id="header" role="header"></header>
+   <section>
+    <div class="logo"></div> 
+    <h1 class="white1">Bienvenue sur le site de UGC cinéma</h1>
+    <ul>
+      <li class="white">Cinémas</li>
+      <li class="white">Films</li>
+      <li class="white">Evènements</li>
+      <li class="white">Offres et Cartes</li>
+      <li class="white">Viva L'opéra</li> 
+     
+    </ul>
+    <ul id="menu1">
+        <li><a href="Résa Express">Résa Express</a></li>
+    </ul>
+   </section>
+   <p>Ce site vous permet de voir les nouveaux films projetés dans tous les cinémas UGC<br/>Aussi les films projetés en salle mais aussi les films prévus dans pour les mois à venir</p>
+   <img src="img/mea.jpg" alt="mea.jpg ">
+   <h2 class="titre_h2">Nouveautés</h2>
+   <img src="img/gardiennes.jpg" alt="gardiennes.jpg ">
+   <img src="img/makala.jpg" alt="makala.jpg ">
+   <img src="img/suburbicon.jpg" alt="suburbicon.jpg ">
+   <footer>
+   <p>Accueil</p>
+   </footer>
+
+  </body>
 </html>
