--- a/www/index.html
+++ b/www/index.html
@@ -1,38 +1,40 @@
 <!DOCTYPE html>
 <html lang="fr">
- <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="style.css">
-  <title>Document</title>
- </head>
-  <body class="front">
-   <header id="header" role="header"></header>
-   <section>
-    <div class="logo"></div> 
-    <h1 class="white1">Bienvenue sur le site de UGC cinéma</h1>
-    <ul>
-      <li class="white">Cinémas</li>
-      <li class="white">Films</li>
-      <li class="white">Evènements</li>
-      <li class="white">Offres et Cartes</li>
-      <li class="white">Viva L'opéra</li> 
-     
-    </ul>
-    <ul id="menu1">
-        <li><a href="Résa Express">Résa Express</a></li>
-    </ul>
-   </section>
-   <p>Ce site vous permet de voir les nouveaux films projetés dans tous les cinémas UGC<br/>Aussi les films projetés en salle mais aussi les films prévus dans pour les mois à venir</p>
-   <img src="img/mea.jpg" alt="mea.jpg ">
-   <h2 class="titre_h2">Nouveautés</h2>
-   <img src="img/gardiennes.jpg" alt="gardiennes.jpg ">
-   <img src="img/makala.jpg" alt="makala.jpg ">
-   <img src="img/suburbicon.jpg" alt="suburbicon.jpg ">
-   <footer>
-   <p>Accueil</p>
-   </footer>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <link rel="stylesheet" href="style.css">
+        <title>Document</title>
+    </head>
+    <body class="front">
+      <header role="header"> 
+          <div id="header">
+            <div class="logo"></div> 
+            <h1 class="white1">UGC cinéma</h1>
+          </div>
+          <imput cl></imput>
+      </header>      
+      <ul>
+          <li class="white">Films</li>
+          <li class="white">Evènements</li>
+          <li class="white">Offres et Cartes</li>
+          <li class="white">Viva L'opéra</li> 
+          <li class="redhaut">
+            <a href="#" class="Résa Express">Résa Express</a>
+          </li>
+      </ul>  
+       <img src="img/mea.jpg" alt="mea.jpg ">
+        <h2 class="titre_h2">Nouveautés</h2>
+        <img src="img/gardiennes.jpg" alt="gardiennes.jpg ">
+        <img src="img/makala.jpg" alt="makala.jpg ">
+        <img src="img/suburbicon.jpg" alt="suburbicon.jpg ">
+      <footer>
+            <p class="baspage">CinémasUGC</p>
+            <p class="baspage">Films à l'Affiche</p>
+            <p class="baspage">Evénements</p>
+            <p class="baspage">Offres et Cartes</p>
+      </footer>
 
-  </body>
+    </body>
 </html>
