ajout image iphone

--- a/www/index.html
+++ b/www/index.html
@@ -29,6 +29,11 @@
         <img src="img/gardiennes.jpg" alt="gardiennes.jpg ">
         <img src="img/makala.jpg" alt="makala.jpg ">
         <img src="img/suburbicon.jpg" alt="suburbicon.jpg ">
+      <section id="block-autopromo"> 
+         <img src="img/iphone-7.jpg" alt="iphone-7.jpg ">  
+      </section>
+
+      
       <footer>
             <p class="baspage">CinémasUGC</p>
             <p class="baspage">Films à l'Affiche</p>
