ajout-bar-recherche

--- a/www/index.html
+++ b/www/index.html
@@ -1,45 +1,168 @@
 <!DOCTYPE html>
 <html lang="fr">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <link rel="stylesheet" href="style.css">
-        <title>Document</title>
-    </head>
-    <body class="front">
-      <header role="header"> 
-          <div id="header">
-            <div class="logo"></div> 
-            <h1 class="white1">UGC cinéma</h1>
-          </div>
-          <imput cl></imput>
-      </header>      
-      <ul>
-          <li class="white">Films</li>
-          <li class="white">Evènements</li>
-          <li class="white">Offres et Cartes</li>
-          <li class="white">Viva L'opéra</li> 
-          <li class="redhaut">
-            <a href="#" class="Résa Express">Résa Express</a>
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="style.css">
+  <title>Document</title>
+</head>
+
+<body class="front">
+  <header role="header">
+    <div id="header">
+      <div class="logo"></div>
+    </div>
+    <div class="header-right">
+      <div>Recherche</div>
+      <div>Mes résas</div>
+      <div>Compte</div>
+      <div>Espace pro</div>
+    </div>
+  </header>
+  <ul>
+    <li class="white">Films</li>
+    <li class="white">Evènements</li>
+    <li class="white">Offres et Cartes</li>
+    <li class="white">Viva L'opéra</li>
+    <li class="white">
+      <a href="#" class="Résa Express">Résa Express</a>
+    </li>
+  </ul>
+  <div class="photo-gardiens"></div><img src="img/mea.jpg" alt="mea.jpg "></div>
+  <h2 class="titre_h2">Nouveautés</h2>
+  <img src="img/gardiennes.jpg" alt="gardiennes.jpg ">
+  <img src="img/makala.jpg" alt="makala.jpg ">
+  <img src="img/suburbicon.jpg" alt="suburbicon.jpg ">
+  <section>
+    <div class="conteneur1">
+      <img alt="UGC Illimité" class="autopromo-photo" src="https://www.ugc.fr/dynamique/images/homepage/mag-decemnrel.png">
+      <div class="element1"></div>
+      <span class="title">ILLIMITE</span>
+      <p class="contenaire-paragraph">Le magazine des cinémas UGC</p>
+      <a class="btn" href="http://fr.calameo.com/read/005246205d22cb14a739b" target="_blank">Lire le mag</a>
+      <div class="element2"></div>
+      <img src="img/phoneAppv2.png" alt="phoneApp_v2.png ">
+      <span class="title-ugc">UGC DIRECT</span>
+      <p class="contenaire-paragraph">L'appli mobile pour les cinéphiles!</p>
+      <div class="element3"></div>
+      <div class="element4"></div>
+    </div>
+  </section>
+  <footer class="blok-footer">
+    <div class="block-footer-menu">
+      <div>
+        <h3>cinémas ugc</h3>
+        <ul>
+          <li>
+            <a href="#" class="gaClick gaClickProceeded" data-ga-name="desktop_footer_cinema" onclick="javascript:try { 	ga_trackEvent('Footer', 'Clic', 'Region cinema',	1, false, true, function(event) { location = 'cinemas.html?id=1'}	);	return false; } catch(e) { location = 'cinemas.html?id=1' };"
+              target="_self"> Paris </a>
           </li>
-      </ul>  
-       <img src="img/mea.jpg" alt="mea.jpg ">
-        <h2 class="titre_h2">Nouveautés</h2>
-        <img src="img/gardiennes.jpg" alt="gardiennes.jpg ">
-        <img src="img/makala.jpg" alt="makala.jpg ">
-        <img src="img/suburbicon.jpg" alt="suburbicon.jpg ">
-      <section id="block-autopromo"> 
-         <img src="img/iphone-7.jpg" alt="iphone-7.jpg ">  
-      </section>
+          <li>
+            <li>
+              <a href="#" class="gaClick gaClickProceeded" data-ga-name="desktop_footer_cinema" onclick="javascript:try { 	ga_trackEvent('Footer', 		'Clic', 		'Region cinema', 		1, 		false, 		true, 		function(event) { location = 'cinemas.html?id=2'}	);	return false; } catch(e) { location = 'cinemas.html?id=2' };"
+                target="_self"> En région parisienne </a>
+            </li>
+            <li>
+              <a href="#" class="gaClick gaClickProceeded" data-ga-name="desktop_footer_cinema" onclick="javascript:try { 	ga_trackEvent('Footer', 		'Clic', 		'Region cinema', 		1, 		false, 		true, 		function(event) { location = 'cinemas.html?id=3'}	);	return false; } catch(e) { location = 'cinemas.html?id=3' };"
+                target="_self"> Bordeaux </a>
+            </li>
+            <li>
+              <a href="#" class="gaClick gaClickProceeded" data-ga-name="desktop_footer_cinema" onclick="javascript:try { 	ga_trackEvent('Footer', 		'Clic', 		'Region cinema', 		1, 		false, 		true, 		function(event) { location = 'cinemas.html?id=4'}	);	return false; } catch(e) { location = 'cinemas.html?id=4' };"
+                target="_self"> Caen </a>
+            </li>
+            <li>
+              <a href="#" class="gaClick gaClickProceeded" data-ga-name="desktop_footer_cinema" onclick="javascript:try { 	ga_trackEvent('Footer', 		'Clic', 		'Region cinema', 		1, 		false, 		true, 		function(event) { location = 'cinemas.html?id=5'}	);	return false; } catch(e) { location = 'cinemas.html?id=5' };"
+                target="_self"> Lille </a>
+            </li>
+            <li>
+              <a href="#" class="gaClick gaClickProceeded" data-ga-name="desktop_footer_cinema" onclick="javascript:try { 	ga_trackEvent('Footer', 		'Clic', 		'Region cinema', 		1, 		false, 		true, 		function(event) { location = 'cinemas.html?id=6'}	);	return false; } catch(e) { location = 'cinemas.html?id=6' };"
+                target="_self"> Lyon </a>
+            </li>
+            <li>
+              <a href="#" class="gaClick gaClickProceeded" data-ga-name="desktop_footer_cinema" onclick="javascript:try { 	ga_trackEvent('Footer', 		'Clic', 		'Region cinema', 		1, 		false, 		true, 		function(event) { location = 'cinemas.html?id=7'}	);	return false; } catch(e) { location = 'cinemas.html?id=7' };"
+                target="_self"> Nancy </a>
+            </li>
+            <li>
+              <a href="#" class="gaClick gaClickProceeded" data-ga-name="desktop_footer_cinema" onclick="javascript:try { 	ga_trackEvent('Footer', 		'Clic', 		'Region cinema', 		1, 		false, 		true, 		function(event) { location = 'cinemas.html?id=8'}	);	return false; } catch(e) { location = 'cinemas.html?id=8' };"
+                target="_self"> Nantes </a>
+            </li>
+            <li>
+              <a href="#" class="gaClick gaClickProceeded" data-ga-name="desktop_footer_cinema" onclick="javascript:try { 	ga_trackEvent('Footer', 		'Clic', 		'Region cinema', 		1, 		false, 		true, 		function(event) { location = 'cinemas.html?id=10'}	);	return false; } catch(e) { location = 'cinemas.html?id=10' };"
+                target="_self"> Strasbourg </a>
+            </li>
+        </ul>
+      </div>
+      <div class="bloc2">
+        <h3>films à l'affiche</h3>
+        <ul>
+          <li>
+            <a href="film.html?id=12000"> SOLEIL BATTANT </a>
+          </li>
+          <li>
+            <a href="film.html?id=12002"> L'INTRUSA </a>
+          </li>
+          <li>
+            <a href="film.html?id=11908"> LA DEUXIEME ETOILE </a>
+          </li>
+          <li>
+            <a href="film.html?id=11908"> LA DEUXIEME ETOILE </a>
+          </li>
+          <li>
+            <a href="film.html?id=11943"> GIRLS TRIP </a>
+          </li>
+          <li>
+            <a href="film.html?id=11880"> STAR WARS LES DERNIERS JEDI </a>
+          </li>
+          <li>
+            <a href="film.html?id=11977"> MARIA BY CALLAS </a>
+          </li>
+          <li>
+            <a href="film.html?id=11979"> LUCKY </a>
+          </li>
+          <li>
+            <a href="film.html?id=11997"> LE CRIME DE L'ORIENT EXPRESS </a>
+          </li>
+          <li>
+            <a href="film.html?id=11981"> DROLES DE PETITES BETES </a>
+          </li>
+        </ul>
+      </div>
+      <div class="bloc3">
+        <h3>évènements</h3>
+        <ul>
+          <li>
+            <a href="evenements.html">Tous les événements</a>
+          </li>
+        </ul>
+      </div>
+      <div class="bloc4">
+        <h3>offres et cartes</h3>
+        <ul>
+          <li>
+            <a href="les-offres-ugc-illimite.html">UGC illimité</a>
+          </li>
+          <li>
+            <a href="ugcplus-formule.html">UGC+</a>
+          </li>
+          <li>
+            <a href="club-fidelite.html">Club &amp; Fidélité </a>
+          </li>
+          <li>
+            <a href="les-offres-blue.html">UGC Blue</a>
+          </li>
+          <li>
+            <a href="les-offres-partenaires.html">Partenaires</a>
+          </li>
+          <li>
+            <a href="les-offres-ugc.html">Toutes les offres et cartes</a>
+          </li>
+        </ul>
+      </div>
+      </nav>
+    </div>
+  </footer>
+</body>
 
-      
-      <footer>
-            <p class="baspage">CinémasUGC</p>
-            <p class="baspage">Films à l'Affiche</p>
-            <p class="baspage">Evénements</p>
-            <p class="baspage">Offres et Cartes</p>
-      </footer>
-
-    </body>
 </html>
