--- a/www/index.html
+++ b/www/index.html
@@ -16,7 +16,7 @@
       <div class="logo"></div>
     </div>
     <div class="icon">
-      <i class="Recherche"></i>
+      <i class="fa fa-search" aria-hidden="true"></i>
       <i class="Mes résas"></i>
       <i class="Compte"></i>
       <i class="Espace pros"></i>
@@ -24,7 +24,10 @@
     <div class="nav-recherche">
       <ul>
         <li class="Recherche">
-          <a href="Recherche">Recherche</a>
+          <a href="Recherche">
+            <i class="fa fa-search fa-2x" aria-hidden="true"></i>
+            <p>Recherche</p>
+          </a>
         </li>
         <li class="Mes résas">
           <a href="Mes résas">Mes résas</a>
@@ -94,7 +97,7 @@
   <footer class="blok-footer">
     <div class="block-footer-menu">
       <div>
-        <h3>Cinémas ugc</h3>
+        <h3>Cinémas UGC</h3>
         <ul>
           <li>
             <a href="#" class="gaClick gaClickProceeded" data-ga-name="desktop_footer_cinema" onclick="javascript:try { 	ga_trackEvent('Footer', 'Clic', 'Region cinema',	1, false, true, function(event) { location = 'cinemas.html?id=1'}	);	return false; } catch(e) { location = 'cinemas.html?id=1' };"
@@ -135,7 +138,7 @@
         </ul>
       </div>
       <div class="bloc2">
-        <h3>films à l'affiche</h3>
+        <h3>Films à l'affiche</h3>
         <ul>
           <li>
             <a href="film.html?id=12000"> SOLEIL BATTANT </a>
@@ -170,7 +173,7 @@
         </ul>
       </div>
       <div class="bloc3">
-        <h3>évènements</h3>
+        <h3>Evènements</h3>
         <ul>
           <li>
             <a href="evenements.html">Tous les événements</a>
@@ -178,7 +181,7 @@
         </ul>
       </div>
       <div class="bloc4">
-        <h3>offres et cartes</h3>
+        <h3>Offres et cartes</h3>
         <ul>
           <li>
             <a href="les-offres-ugc-illimite.html">UGC illimité</a>
