--- a/www/index.html
+++ b/www/index.html
@@ -1,211 +1,215 @@
 <!DOCTYPE html>
 <html lang="fr">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-  <title>Document</title>
-</head>
-
-<body class="front">
-  <header role="header">
-    <div id="header">
-      <div class="logo"></div>
-    </div>
-    <div class="icon">
-      <i class="fa fa-search" aria-hidden="true"></i>
-      <i class="Mes résas"></i>
-      <i class="Compte"></i>
-      <i class="Espace pros"></i>
-    </div>
-    <div class="nav-recherche">
-      <ul>
-        <li class="Recherche">
-          <a href="Recherche">
-            <i class="fa fa-search fa-2x" aria-hidden="true"></i>
-            <p>Recherche</p>
-          </a>
-        </li>
-        <li class="Mes résas">
-          <a href="Mes résas">Mes résas</a>
-        </li>
-        <li class="Compte">
-          <a href="Compte">Compte</a>
-        </li>
-        <li class="Espace pro">
-          <a href="Espace pro">Espace pro</a>
-        </li>
-      </ul>
-    </div>
-  </header>
-  <div class="white"></div>
-  <ul>
-    <li class="white">Cinémas</li>
-    <li class="white">Films</li>
-    <li class="white">Evènements</li>
-    <li class="white">Offres et Cartes</li>
-    <li class="white">Viva L'opéra</li>
-    <li class="white">
-      <a href="#" class="Résa Express">Résa Express</a>
-    </li>
-  </ul>
-  </di>
-  <div class="photo-gardiens"></div>
-  <img src="img/mea.jpg" alt="mea.jpg ">
-  </div>
-  <div class="new">
-    <h2 class="titre_h2">Nouveautés</h2>
-  </div>
-  <div class="image-middle">
-    <img src="img/gardiennes.jpg" alt="gardiennes.jpg ">
-    <img src="img/makala.jpg" alt="makala.jpg ">
-    <img src="img/suburbicon.jpg" alt="suburbicon.jpg ">
-  </div>
-  <section>
-    <div class="container">
-      <img alt="UGC Illimité" class="autopromo-photo" src="https://www.ugc.fr/dynamique/images/homepage/mag-decemnrel.png">
-      <div class="magaz">
-        <ul>
-          <li>
-            <span class="title">ILLIMITE</span>
-          </li>
-          <li>
-            <p class="contenaire-paragraph">Le magazine des cinémas UGC</p>
-          </li>
-          <li>
-            <a class="btn" href="http://fr.calameo.com/read/005246205d22cb14a739b" target="_blank">Lire le mag</a>
-          </li>
-        </ul>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <title>Document</title>
+  </head>
+  <body class="front">
+    <header role="header">
+      <div id="header">
+        <div class="logo"></div>
       </div>
-      <div class="element2"></div>
-      <img src="img/phoneAppv2.png" class="autopromo-photo" alt="phoneApp_v2.png ">
-      <div class="appli">
-        <ul>
-          <li>
-            <span class="title-ugc">UGC DIRECT</span>
-          </li>
-          <li></li>
-          <p class="contenaire-paragraph">L'appli mobile pour les cinéphiles!</p>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </section>
-  <footer class="blok-footer">
-    <div class="block-footer-menu">
-      <div>
-        <h3>Cinémas UGC</h3>
-        <ul>
-          <li>
-            <a href="#" class="gaClick gaClickProceeded" data-ga-name="desktop_footer_cinema" onclick="javascript:try { 	ga_trackEvent('Footer', 'Clic', 'Region cinema',	1, false, true, function(event) { location = 'cinemas.html?id=1'}	);	return false; } catch(e) { location = 'cinemas.html?id=1' };"
-              target="_self"> Paris </a>
-          </li>
-          <li>
-            <a href="#" class="gaClick gaClickProceeded" data-ga-name="desktop_footer_cinema" onclick="javascript:try { 	ga_trackEvent('Footer', 		'Clic', 		'Region cinema', 		1, 		false, 		true, 		function(event) { location = 'cinemas.html?id=2'}	);	return false; } catch(e) { location = 'cinemas.html?id=2' };"
-              target="_self"> En région parisienne </a>
-          </li>
-          <li>
-            <a href="#" class="gaClick gaClickProceeded" data-ga-name="desktop_footer_cinema" onclick="javascript:try { 	ga_trackEvent('Footer', 		'Clic', 		'Region cinema', 		1, 		false, 		true, 		function(event) { location = 'cinemas.html?id=3'}	);	return false; } catch(e) { location = 'cinemas.html?id=3' };"
-              target="_self"> Bordeaux </a>
-          </li>
-          <li>
-            <a href="#" class="gaClick gaClickProceeded" data-ga-name="desktop_footer_cinema" onclick="javascript:try { 	ga_trackEvent('Footer', 		'Clic', 		'Region cinema', 		1, 		false, 		true, 		function(event) { location = 'cinemas.html?id=4'}	);	return false; } catch(e) { location = 'cinemas.html?id=4' };"
-              target="_self"> Caen </a>
-          </li>
-          <li>
-            <a href="#" class="gaClick gaClickProceeded" data-ga-name="desktop_footer_cinema" onclick="javascript:try { 	ga_trackEvent('Footer', 		'Clic', 		'Region cinema', 		1, 		false, 		true, 		function(event) { location = 'cinemas.html?id=5'}	);	return false; } catch(e) { location = 'cinemas.html?id=5' };"
-              target="_self"> Lille </a>
-          </li>
-          <li>
-            <a href="#" class="gaClick gaClickProceeded" data-ga-name="desktop_footer_cinema" onclick="javascript:try { 	ga_trackEvent('Footer', 		'Clic', 		'Region cinema', 		1, 		false, 		true, 		function(event) { location = 'cinemas.html?id=6'}	);	return false; } catch(e) { location = 'cinemas.html?id=6' };"
-              target="_self"> Lyon </a>
-          </li>
-          <li>
-            <a href="#" class="gaClick gaClickProceeded" data-ga-name="desktop_footer_cinema" onclick="javascript:try { 	ga_trackEvent('Footer', 		'Clic', 		'Region cinema', 		1, 		false, 		true, 		function(event) { location = 'cinemas.html?id=7'}	);	return false; } catch(e) { location = 'cinemas.html?id=7' };"
-              target="_self"> Nancy </a>
-          </li>
-          <li>
-            <a href="#" class="gaClick gaClickProceeded" data-ga-name="desktop_footer_cinema" onclick="javascript:try { 	ga_trackEvent('Footer', 		'Clic', 		'Region cinema', 		1, 		false, 		true, 		function(event) { location = 'cinemas.html?id=8'}	);	return false; } catch(e) { location = 'cinemas.html?id=8' };"
-              target="_self"> Nantes </a>
-          </li>
-          <li>
-            <a href="#" class="gaClick gaClickProceeded" data-ga-name="desktop_footer_cinema" onclick="javascript:try { 	ga_trackEvent('Footer', 		'Clic', 		'Region cinema', 		1, 		false, 		true, 		function(event) { location = 'cinemas.html?id=10'}	);	return false; } catch(e) { location = 'cinemas.html?id=10' };"
-              target="_self"> Strasbourg </a>
-          </li>
-        </ul>
-      </div>
-      <div class="bloc2">
-        <h3>Films à l'affiche</h3>
-        <ul>
-          <li>
-            <a href="film.html?id=12000"> SOLEIL BATTANT </a>
-          </li>
-          <li>
-            <a href="film.html?id=12002"> L'INTRUSA </a>
-          </li>
-          <li>
-            <a href="film.html?id=11908"> LA DEUXIEME ETOILE </a>
-          </li>
-          <li>
-            <a href="film.html?id=11908"> LA DEUXIEME ETOILE </a>
-          </li>
-          <li>
-            <a href="film.html?id=11943"> GIRLS TRIP </a>
-          </li>
-          <li>
-            <a href="film.html?id=11880"> STAR WARS LES DERNIERS JEDI </a>
-          </li>
-          <li>
-            <a href="film.html?id=11977"> MARIA BY CALLAS </a>
-          </li>
-          <li>
-            <a href="film.html?id=11979"> LUCKY </a>
-          </li>
-          <li>
-            <a href="film.html?id=11997"> LE CRIME DE L'ORIENT EXPRESS </a>
-          </li>
-          <li>
-            <a href="film.html?id=11981"> DROLES DE PETITES BETES </a>
-          </li>
-        </ul>
-      </div>
-      <div class="bloc3">
-        <h3>Evènements</h3>
-        <ul>
-          <li>
-            <a href="evenements.html">Tous les événements</a>
-          </li>
-        </ul>
-      </div>
-      <div class="bloc4">
-        <h3>Offres et cartes</h3>
-        <ul>
-          <li>
-            <a href="les-offres-ugc-illimite.html">UGC illimité</a>
-          </li>
-          <li>
-            <a href="ugcplus-formule.html">UGC+</a>
-          </li>
-          <li>
-            <a href="club-fidelite.html">Club &amp; Fidélité </a>
-          </li>
-          <li>
-            <a href="les-offres-blue.html">UGC Blue</a>
-          </li>
-          <li>
-            <a href="les-offres-partenaires.html">Partenaires</a>
-          </li>
-          <li>
-            <a href="les-offres-ugc.html">Toutes les offres et cartes</a>
-          </li>
-        </ul>
-      </div>
+      <nav>
+        <div class="nav-recherche">
+          <ul>
+            <li class="recherche">
+              <a href="recherche">
+                <i class="fa fa-search fa-lg" aria-hidden="true"></i>
+                <p>Recherche</p>
+              </a>
+            </li>
+            <li class="mes résas">
+              <a href="mes résas">
+                  <i class="fa fa-archive" aria-hidden="true"></i>
+                  <p>Mes résas</p>
+              </a>
+            </li>
+            <li class="compte">
+              <a href="compte">
+                  <i class="fa fa-user-circle" aria-hidden="true"></i>
+                  <p>Compte</p>
+              </a>
+            </li>
+            <li class="espace pro">
+              <a href="espace pro">
+                  <i class="fa fa-briefcase" aria-hidden="true"></i>
+                  <p>Espace pro</p>
+              </a>
+            </li>
+          </ul>
+        </div>
       </nav>
+    </header>
+    <div class="white"></div>
+    <ul>
+      <li class="white">Cinémas</li>
+      <li class="white">Films</li>
+      <li class="white">Evènements</li>
+      <li class="white">Offres et Cartes</li>
+      <li class="white">Viva L'opéra</li>
+      <li class="white">
+        <a href="#" class="Résa Express">Résa Express</a>
+      </li>
+    </ul>
+    </di>
+    <div class="photo-gardiens"></div>
+    <img src="img/mea.jpg" alt="ugcm">
     </div>
-  </footer>
-</body>
+    <div class="new">
+      <h2 class="titre_h2">Nouveautés</h2>
+    </div>
+    <div class="image-middle">
+      <img src="img/gardiennes.jpg" alt="gardiennes">
+      <img src="img/makala.jpg" alt="makala">
+      <img src="img/suburbicon.jpg" alt="suburbicon">
+    </div>
+    <section>
+      <div class="container">
+        <img alt="UGC Illimité" class="autopromo-photo" src="https://www.ugc.fr/dynamique/images/homepage/mag-decemnrel.png">
+        <div class="magaz">
+          <ul>
+            <li>
+              <span class="title">ILLIMITE</span>
+            </li>
+            <li>
+              <p class="contenaire-paragraph">Le magazine des cinémas UGC</p>
+            </li>
+            <li>
+              <a class="btn" href="http://fr.calameo.com/read/005246205d22cb14a739b" target="_blank">Lire le mag</a>
+            </li>
+          </ul>
+        </div>
+        <div class="element2"></div>
+        <img src="img/phoneAppv2.png" class="autopromo-photo" alt="phoneApp_v2.png ">
+        <div class="appli">
+          <ul>
+            <li>
+              <span class="title-ugc">UGC DIRECT</span>
+            </li>
+            <li></li>
+            <p class="contenaire-paragraph">L'appli mobile pour les cinéphiles!</p>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+    <nav>
+      <footer class="blok-footer">
+        <div class="block-footer-menu">
+          <div>
+            <h3>Cinémas UGC</h3>
+            <ul>
+              <li>
+                <a href="#" class="gaClick gaClickProceeded" data-ga-name="desktop_footer_cinema" onclick="javascript:try { 	ga_trackEvent('Footer', 'Clic', 'Region cinema',	1, false, true, function(event) { location = 'cinemas.html?id=1'}	);	return false; } catch(e) { location = 'cinemas.html?id=1' };"
+                  target="_self"> Paris </a>
+              </li>
+              <li>
+                <a href="#" class="gaClick gaClickProceeded" data-ga-name="desktop_footer_cinema" onclick="javascript:try { 	ga_trackEvent('Footer', 		'Clic', 		'Region cinema', 		1, 		false, 		true, 		function(event) { location = 'cinemas.html?id=2'}	);	return false; } catch(e) { location = 'cinemas.html?id=2' };"
+                  target="_self"> En région parisienne </a>
+              </li>
+              <li>
+                <a href="#" class="gaClick gaClickProceeded" data-ga-name="desktop_footer_cinema" onclick="javascript:try { 	ga_trackEvent('Footer', 		'Clic', 		'Region cinema', 		1, 		false, 		true, 		function(event) { location = 'cinemas.html?id=3'}	);	return false; } catch(e) { location = 'cinemas.html?id=3' };"
+                  target="_self"> Bordeaux </a>
+              </li>
+              <li>
+                <a href="#" class="gaClick gaClickProceeded" data-ga-name="desktop_footer_cinema" onclick="javascript:try { 	ga_trackEvent('Footer', 		'Clic', 		'Region cinema', 		1, 		false, 		true, 		function(event) { location = 'cinemas.html?id=4'}	);	return false; } catch(e) { location = 'cinemas.html?id=4' };"
+                  target="_self"> Caen </a>
+              </li>
+              <li>
+                <a href="#" class="gaClick gaClickProceeded" data-ga-name="desktop_footer_cinema" onclick="javascript:try { 	ga_trackEvent('Footer', 		'Clic', 		'Region cinema', 		1, 		false, 		true, 		function(event) { location = 'cinemas.html?id=5'}	);	return false; } catch(e) { location = 'cinemas.html?id=5' };"
+                  target="_self"> Lille </a>
+              </li>
+              <li>
+                <a href="#" class="gaClick gaClickProceeded" data-ga-name="desktop_footer_cinema" onclick="javascript:try { 	ga_trackEvent('Footer', 		'Clic', 		'Region cinema', 		1, 		false, 		true, 		function(event) { location = 'cinemas.html?id=6'}	);	return false; } catch(e) { location = 'cinemas.html?id=6' };"
+                  target="_self"> Lyon </a>
+              </li>
+              <li>
+                <a href="#" class="gaClick gaClickProceeded" data-ga-name="desktop_footer_cinema" onclick="javascript:try { 	ga_trackEvent('Footer', 		'Clic', 		'Region cinema', 		1, 		false, 		true, 		function(event) { location = 'cinemas.html?id=7'}	);	return false; } catch(e) { location = 'cinemas.html?id=7' };"
+                  target="_self"> Nancy </a>
+              </li>
+              <li>
+                <a href="#" class="gaClick gaClickProceeded" data-ga-name="desktop_footer_cinema" onclick="javascript:try { 	ga_trackEvent('Footer', 		'Clic', 		'Region cinema', 		1, 		false, 		true, 		function(event) { location = 'cinemas.html?id=8'}	);	return false; } catch(e) { location = 'cinemas.html?id=8' };"
+                  target="_self"> Nantes </a>
+              </li>
+              <li>
+                <a href="#" class="gaClick gaClickProceeded" data-ga-name="desktop_footer_cinema" onclick="javascript:try { 	ga_trackEvent('Footer', 		'Clic', 		'Region cinema', 		1, 		false, 		true, 		function(event) { location = 'cinemas.html?id=10'}	);	return false; } catch(e) { location = 'cinemas.html?id=10' };"
+                  target="_self"> Strasbourg </a>
+              </li>
+            </ul>
+          </div>
+          <div class="bloc2">
+            <h3>Films à l'affiche</h3>
+            <ul>
+              <li>
+                <a href="film.html?id=12000"> SOLEIL BATTANT </a>
+              </li>
+              <li>
+                <a href="film.html?id=12002"> L'INTRUSA </a>
+              </li>
+              <li>
+                <a href="film.html?id=11908"> LA DEUXIEME ETOILE </a>
+              </li>
+              <li>
+                <a href="film.html?id=11908"> LA DEUXIEME ETOILE </a>
+              </li>
+              <li>
+                <a href="film.html?id=11943"> GIRLS TRIP </a>
+              </li>
+              <li>
+                <a href="film.html?id=11880"> STAR WARS LES DERNIERS JEDI </a>
+              </li>
+              <li>
+                <a href="film.html?id=11977"> MARIA BY CALLAS </a>
+              </li>
+              <li>
+                <a href="film.html?id=11979"> LUCKY </a>
+              </li>
+              <li>
+                <a href="film.html?id=11997"> LE CRIME DE L'ORIENT EXPRESS </a>
+              </li>
+              <li>
+                <a href="film.html?id=11981"> DROLES DE PETITES BETES </a>
+              </li>
+            </ul>
+          </div>
+          <div class="bloc3">
+            <h3>Evènements</h3>
+            <ul>
+              <li>
+                <a href="evenements.html">Tous les événements</a>
+              </li>
+            </ul>
+          </div>
+          <div class="bloc4">
+            <h3>Offres et cartes</h3>
+            <ul>
+              <li>
+                <a href="les-offres-ugc-illimite.html">UGC illimité</a>
+              </li>
+              <li>
+                <a href="ugcplus-formule.html">UGC+</a>
+              </li>
+              <li>
+                <a href="club-fidelite.html">Club &amp; Fidélité </a>
+              </li>
+              <li>
+                <a href="les-offres-blue.html">UGC Blue</a>
+              </li>
+              <li>
+                <a href="les-offres-partenaires.html">Partenaires</a>
+              </li>
+              <li>
+                <a href="les-offres-ugc.html">Toutes les offres et cartes</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+    </footer>
+  </nav>
+  </body>
 
 </html>
