rajout espace barre recherche

--- a/www/index.html
+++ b/www/index.html
@@ -15,7 +15,7 @@
       </div>
       <nav>
         <div class="nav-recherche">
-          <ul>
+          <ul class="icones">
             <li class="recherche">
               <a href="recherche">
                 <i class="fa fa-search fa-lg" aria-hidden="true"></i>
