rajout menu footer haut

--- a/www/index.html
+++ b/www/index.html
@@ -79,7 +79,7 @@
               <p class="contenaire-paragraph">Le magazine des cinémas UGC</p>
             </li>
             <li>
-              <a class="btn" href="http://fr.calameo.com/read/005246205d22cb14a739b" target="_blank">Lire le mag</a>
+              <a class="btn" href="http://fr.calameo.com/read/005246205d22cb14a739b" target="_blank">LIRE LE MAG</a>
             </li>
           </ul>
         </div>
